update jdk and aws